package com.mentoredu.auth.entity;

public enum AuthProvider {
    EMAIL, GOOGLE
}
