package com.mentoredu.auth.entity;

public enum UserStatus {
    ACTIVE, PENDING, SUSPENDED, DELETED
}
