package com.mentoredu.community.model;

public enum ReportStatus {
    OPEN,
    RESOLVED
}
