package com.mentoredu.forum.model;

public enum ThreadStatus {
    OPEN, CLOSED
}
