package com.mentoredu.profile.model;

public enum ProfileType {
    STUDENT,
    TEACHER,
    ACADEMY
}
